--- a/costEvaluation/src/main/resources/application.properties
+++ b/costEvaluation/src/main/resources/application.properties
@@ -1,3 +1,26 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 
+#?mapper??????debug???????
+logging.level.com.nikki.cmhproj.mapper=DEBUG
+
+#??????????utf-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+server.servlet.encoding.charset=utf-8
+
+#??mapper???????
+# mybatis.mapper-locations = classpath:mapper/*.xml
+#??mybatis??????
+mybatis.config-location = classpath:/sqlMapConfig.xml
+#???????????mapper?????????????????
+
+#?????????????????????????????
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/sw_cost_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+spring.datasource.username = sw_cost_db
+spring.datasource.password = QiHvW59jXQ6Sie6V
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
+
