--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,7 @@
         "docxtemplater": "3.42.1",
         "docxtemplater-image-module-free": "1.1.1",
         "echarts": "5.4.3",
-        "element-plus": "2.2.28",
+        "element-plus": "^2.8.8",
         "file-saver": "2.0.5",
         "glob": "10.3.4",
         "mime": "4.0.0",
