--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
         "vite-plugin-html": "3.2.1",
         "vue": "3.3.4",
         "vue-router": "4.2.5",
+        "vue3-tree-org": "^4.2.2",
         "vuedraggable": "4.1.0"
     },
     "devDependencies": {
