--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,6 +17,6 @@ mybatis.config-location = classpath:/sqlMapConfig.xml
 
 #?????????????????????????????
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/sw_cost_db_local?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
-spring.datasource.username = jjy
-spring.datasource.password = jjy20041026
+spring.datasource.url = jdbc:mysql://mysql.sqlpub.com:3306/sw_cost_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+spring.datasource.username = sw_cost_db
+spring.datasource.password = jMb2CAWiDmWA5YEg
